@@ -13,7 +13,7 @@ use Schedule::Client::Args;
 use Schedule::Client::Clientfuncs qw(:FUNCS);
 use Schedule::Client::Iterator;
 
-our $VERSION = '5.2';
+our $VERSION = '5.3';
 
 # Global variables:
 
